Added styles option

--- a/generator-rs/c/templates/component.html
+++ b/generator-rs/c/templates/component.html
@@ -1,11 +1,13 @@
 import React from 'react'
+import styles from './<%= title %>.module.scss'
+import cn from 'classnames';
 
 const <%= title %> = () => {
-    return (
-        <div>
-            <%= title %> component works!
-        </div>
-    )
+return (
+<div>
+    <%= title %> component works!
+</div>
+)
 }
 
 export default <%= title %>
